swagger for user routes
